# C-Programming-in-IoT-Devices-TX00EX72-3001

./: .gitignore  README.md
C-Programming-in-IoT-Devices-TX00EX72-3001/Oma-tasks/Ex-09/: readme.md
C-Programming-in-IoT-Devices-TX00EX72-3001/Oma-tasks/Ex-13/: main.c
C-Programming-in-IoT-Devices-TX00EX72-3001/Project-folder/: Questions-for-teach.txt  readme.md  test2.c
C-Programming-in-IoT-Devices-TX00EX72-3001/Ville-tasks/1-01/: main.c  readme.md
C-Programming-in-IoT-Devices-TX00EX72-3001/Ville-tasks/6-02/: test.c
C-Programming-in-IoT-Devices-TX00EX72-3001/Ville-tasks/7-03/: cmp2.py
C/International-Sensor-Development-Project-TX00CR41-3007/: app.py  flask.py  index.html  readme.md
International-Sensor-Development-Project-TX00CR41-3007/: app.py  test.py
International-Sensor-Development-Project-TX00CR41-3007/imports/: db.py  mqtt.py
International-Sensor-Development-Project-TX00CR41-3007/isdProjectImports/: credentials.py  dbFunctions.md  dbFunctions.py  esp.py  mqttFunctions.py  mqttImports.py  voteHandling.py
Mathematics-and-Physics-for-IoT-TX00EX82-3001/Mathematics-Week-1/: Mathematics-Week-1.md  plots.py
Mathematics-and-Physics-for-IoT-TX00EX82-3001/Mathematics-Week-2/: Week2.md
Mathematics-and-Physics-for-IoT-TX00EX82-3001/Physics-Weeks-1-and-2/: week1.md
Modern-Computer-Architecture-TX00EX80-3001/Oma-tasks/02-Instruction-set-and-datapath/: CMakeLists.txt  exercise2.c  main.c
Oma-tasks/Ex-10/: readme.md
Oma-tasks/Ex-14/: 1.txt
Oma-tasks/Ex-21/: main.c
Ville-tasks/4-02/: readme.md
Ville-tasks/6-04/: readme.md
Ville-tasks/7-01/: test.c
(+136 files in other folders)
